--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div>
-	<button id="btn">Submit button</button>
+	<button id="btn" type="submit">Submit button</button>
 	</div>
 </body>
 
